adding new styles, api endpoints and project page

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -1,8 +1,17 @@
-$icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/fonts/bootstrap/";
+
 @import '../bower_components/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap';
 @import '../bower_components/bootstrap-social/bootstrap-social.scss';
+
+
+@import '../assets/css/bootstrap.css';
+
+$icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/fonts/bootstrap/";
 $fa-font-path: "../bower_components/font-awesome/fonts";
 @import '../bower_components/font-awesome/scss/font-awesome';
+
+@import '../assets/css/animate.min.css';
+@import '../assets/css/creative.css';
+
 
 /**
  * App-wide Styles
@@ -16,10 +25,11 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 }
 
 // Component styles are injected through grunt
-// injector
-@import 'admin/admin.scss';
-@import 'main/main.scss';
-@import '../components/footer/footer.scss';
-@import '../components/modal/modal.scss';
-@import '../components/oauth-buttons/oauth-buttons.scss';
+// notinjector
+// @import 'admin/admin.scss';
+// @import 'main/main.scss';
+// @import 'projects/projects.scss';
+// @import '../components/footer/footer.scss';
+// @import '../components/modal/modal.scss';
+// @import '../components/oauth-buttons/oauth-buttons.scss';
 // endinjector
