--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,6 +1,6 @@
+<br>
 <div class="container">
-  <p>Angular Fullstack v3.3.0 |
-    <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-    <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a>
+  <p>Hack Summit 2016 project by
+    <a href="https://elninja.com">El Ninja</a>
   </p>
 </div>
