--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,15 +1,15 @@
-<div class="navbar navbar-default navbar-static-top" ng-controller="NavbarController">
-  <div class="container">
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top" ng-controller="NavbarController">
+  <div class="container-fluid">
     <div class="navbar-header">
-      <button class="navbar-toggle" type="button" ng-click="nav.isCollapsed = !nav.isCollapsed">
+      <button class="navbar-toggle collapsed" type="button" ng-click="nav.isCollapsed = !nav.isCollapsed">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">hacksummit</a>
+      <a class="navbar-brand page-scroll" href="/">hacksummit</a>
     </div>
-    <div collapse="nav.isCollapsed" class="navbar-collapse collapse" id="navbar-main">
+    <div collapse="nav.isCollapsed" class="collapse navbar-collapse" id="navbar-main">
       <ul class="nav navbar-nav">
         <li ng-repeat="item in nav.menu" ui-sref-active="active">
             <a ui-sref="{{item.state}}">{{item.title}}</a>
@@ -26,4 +26,15 @@
       </ul>
     </div>
   </div>
-</div>
+</nav>
+
+<!-- <header ng-show="//define if current route is main">
+    <div class="header-content">
+        <div class="header-content-inner">
+            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <hr>
+            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+        </div>
+    </div>
+</header> -->
