new projects list interface

--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,6 +1,6 @@
 <br>
 <div class="container">
-  <p>Hack Summit 2016 project by
-    <a href="https://elninja.com">El Ninja</a>
+  <p>A hack.summit() 2016 project submission by
+    <a href="http://elninja.com">El Ninja Team</a>
   </p>
 </div>
