--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,5 +1,5 @@
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top" ng-controller="NavbarController">
-  <div class="container-fluid">
+  <div class="container">
     <div class="navbar-header">
       <button class="navbar-toggle collapsed" type="button" ng-click="nav.isCollapsed = !nav.isCollapsed">
         <span class="sr-only">Toggle navigation</span>
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand page-scroll" href="/">hacksummit</a>
+      <a class="navbar-brand page-scroll" href="/">hack.summit()</a>
     </div>
     <div collapse="nav.isCollapsed" class="collapse navbar-collapse" id="navbar-main">
       <ul class="nav navbar-nav">
