--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand page-scroll" href="/">hack.summit()</a>
+      <a class="navbar-brand page-scroll" href="/">team.port.ninja</a>
     </div>
     <div collapse="nav.isCollapsed" class="collapse navbar-collapse" id="navbar-main">
       <ul class="nav navbar-nav">
