--- a/client/assets/css/creative.scss
+++ b/client/assets/css/creative.scss
@@ -52,7 +52,10 @@ p {
 }
 
 .bg-primary {
-    background-color: #31708F;
+    /*background-color: #31708F;*/
+    background-image: url("http://i.imgur.com/oSsdryt.jpg");
+    background-size: cover;
+
 }
 
 .bg-dark {
@@ -61,7 +64,8 @@ p {
 }
 
 .text-faded {
-    color: rgba(255,255,255,.7);
+    color: rgba(255,255,255,1);
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 section {
@@ -334,7 +338,7 @@ header .header-content .header-content-inner p {
 .btn-default {
     border-color: #fff;
     color: #222;
-    background-color: #fff;
+    background-color: #ffffff;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
