--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand page-scroll" href="/">team.port.ninja</a>
+      <a class="navbar-brand page-scroll" href="/"><img style="max-width:200px; margin-top: -7px;"
+             src="http://i.imgur.com/SYBwsjJ.png"></a>
     </div>
     <div collapse="nav.isCollapsed" class="collapse navbar-collapse" id="navbar-main">
       <ul class="nav navbar-nav">
